--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-html
-{
-    background-color: aqua;
-}
-
 p
 {
     font-size: 14px;
@@ -12,10 +7,19 @@ p
 
 h1
 {
-    color:crimson;
+    color: blue;
+    background-color: lightblue;
+    padding: 16px;
+    text-align: center;
 }
 
 h3
 {
     color: blueviolet;
+}
+
+li
+{
+    background-color: lightblue;
+    padding: 8px;
 }
